tests/ui/macros/macro-parameter-span.stderr
error[E0425]: cannot find value `x` in this scope
  --> $DIR/macro-parameter-span.rs:11:9
   |
LL |         x
   |         ^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
